<resources>
    <string name="app_name">UnipiAudioStories</string>
    <string name="read_from_our_wonderful_selection">Read from our wonderful selection of fairytales for children!</string>
    <string name="settings">Settings</string>
    <string name="story_title">Story Title</string>
    <string name="author">Author</string>
    <string name="full_text_goes_here">Full Text Goes Here...</string>
    <string name="read_story">Read Story</string>
    <string name="story_cover">Story Cover</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="greek">Ελληνικά</string>
    <string name="japanese">日本語</string>
    <string name="save">Save</string>
    <string name="my_listening_stats">My Listening Stats</string>
    <string name="statistics">Statistics</string>
</resources>